syntax="proto3";
package com.hr.paymentsvc;
option java_multiple_files = true;
option java_outer_classname = "OrderProto";

// Service Signature
service PaymentService {
  rpc GetPayment(PaymentRequest) returns (PaymentResponse);
}

// Request
message PaymentRequest {
  string name = 1;
}

// Response
message PaymentResponse {
  string message = 1;
}
